// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VProgressCircular.js should render component and match snapshot 1`] = `

<div class="progress-circular"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
    <span>
      content
    </span>
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with button prop and match snapshot 1`] = `

<div class="progress-circular progress-circular--button"
     style="height: 40px; width: 40px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with color prop and match snapshot 1`] = `

<div class="progress-circular orange--text text--lighten-1"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with fill prop and match snapshot 1`] = `

<div class="progress-circular"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with indeterminate prop and match snapshot 1`] = `

<div class="progress-circular progress-circular--indeterminate"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="125.66370614359172px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with rotate prop and match snapshot 1`] = `

<div class="progress-circular"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="6.25"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with size prop and match snapshot 1`] = `

<div class="progress-circular"
     style="height: 17px; width: 17px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="10"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="10"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;

exports[`VProgressCircular.js should render component with width prop and match snapshot 1`] = `

<div class="progress-circular"
     style="height: 32px; width: 32px;"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="25 25 50 50"
  >
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="10"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
            class="progress-circular__underlay"
    >
    </circle>
    <circle fill="transparent"
            cx="50"
            cy="50"
            r="20"
            stroke-width="10"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
            class="progress-circular__overlay"
    >
    </circle>
  </svg>
  <div class="progress-circular__info">
  </div>
</div>

`;
